--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="samyak.png"
+            src="about.jpg"
             alt="Profile picture"
             class="about-pic"
           />
