--- a/index.html
+++ b/index.html
@@ -102,28 +102,54 @@
         onclick="location.href='./#experience'"
       />
     </section>
-    <section id="experience">
-      <p class="section__text__p1">Explore My</p>
-      <h1 class="title">Experience</h1>
-      <div class="experience-details-container">
-        <div class="about-containers">
-          <div class="details-container">
-            <h2 class="experience-sub-title"><a href="Antwalk.pdf" target="_blank" title="View Certificate"><strong>Cybersecurity Intern</strong></a></h2>
-            <h3>AntWalk<br />June 2023 - August 2023</h3>
-            <p>
-              Created and organized a comprehensive set of assessment material covering key cybersecurity domains, including SOC operations, SIEM and SOAR platforms, network security, vulnerability assessment and penetration testing (VAPT), risk and vulnerability management, as well as incident response and management.
-            </p>
-          </div>
-          <div class="details-container">
-            <h2 class="experience-sub-title"><a href="Siemens.pdf" target="_blank" title="View Certificate"><strong>Summer Intern</strong></a></h2>
-            <h3>Siemens Gamesa Renewable Energy<br />June 2024 - July 2024</h3>
-            <p>
-              Developed and delivered upskilling courses to enhance employee cybersecurity awareness. Conducted risk classification and provided targeted mitigation strategies to strengthen organizational security.
-            </p>
-          </div>
+   <section id="experience">
+  <p class="section__text__p1">Explore My</p>
+  <h1 class="title">Experience</h1>
+  <div class="experience-details-container">
+    <div class="about-containers">
+
+      <!-- PwC Internship -->
+      <div class="details-container">
+        <h2 class="experience-sub-title"><strong>AI Intern</strong></h2>
+        <h3>PricewaterhouseCoopers (PwC), Bengaluru<br />June 2025 – August 2025</h3>
+        <div class="company-logo">
+          <img src="pwc.png" alt="PwC Logo" class="icon" />
         </div>
+        <p>
+          • Built a RAG-powered chatbot reducing document retrieval time by 60%, boosting productivity.<br />
+          • Designed AI pipelines to automate reasoning tasks, saving 20+ hours/month of manual work.<br />
+          • Developed a visual intelligence system to analyze UI screenshots, cutting design cycles by 30%.<br />
+          • Delivered a lightweight code editor, improving developer onboarding by 15%.
+        </p>
       </div>
-    </section>
+
+      <!-- Siemens Internship -->
+      <div class="details-container">
+        <h2 class="experience-sub-title"><a href="Siemens.pdf" target="_blank" title="View Certificate"><strong>Cybersecurity Intern</strong></a></h2>
+        <h3>Siemens Gamesa Renewable Energy, Bengaluru<br />June 2024 – July 2024</h3>
+        <p>
+          • Conducted risk classification on 50+ assets, identifying 12 critical vulnerabilities and reducing exposure by 25%.<br />
+          • Delivered awareness training for 100+ employees, raising test scores by 40%.<br />
+          • Drafted ISO 27001-compliant policies, ensuring 100% adherence to standards.<br />
+          • Ran phishing simulations, reducing click-through rates by 35%.
+        </p>
+      </div>
+
+      <!-- AntWalk Internship -->
+      <div class="details-container">
+        <h2 class="experience-sub-title"><a href="Antwalk.pdf" target="_blank" title="View Certificate"><strong>Cybersecurity Intern</strong></a></h2>
+        <h3>AntWalk, Remote<br />June 2023 – August 2023</h3>
+        <p>
+          • Designed 25+ SOC/SIEM/SOAR training modules, strengthening incident handling skills.<br />
+          • Built VAPT labs, improving engagement by 30% and training completion rates by 50%.<br />
+          • Integrated 15+ real-world threat case studies, boosting applied knowledge.<br />
+          • Created incident playbooks, reducing response times in simulations by 20%.
+        </p>
+      </div>
+
+    </div>
+  </div>
+</section>
     <section id="certifications">
       <p class="section__text__p1">Browse My</p>
       <h1 class="title">Certifications</h1>
