--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <h2 class="experience-sub-title"><strong>AI Intern</strong></h2>
         <h3>PricewaterhouseCoopers (PwC), Bengaluru<br />June 2025 – August 2025</h3>
         <div class="company-logo">
-          <img src="pwc.png" alt="PwC Logo" class="icon" />
+          <img src="pwclogo.png" alt="PwC Logo" class="icon" />
         </div>
         <p>
           • Built a RAG-powered chatbot reducing document retrieval time by 60%, boosting productivity.<br />
